--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Dinosaurs</title>
-<link href="CSS/general.css" rel="stylesheet">
-</head>
-
-<body>
+---
+layout: default
+---
 
 <h1>Dinosaurs!</h1>
 
-</body>
-</html>
+<p>Dinosaurs were super chill dudes.</p>
+
+
