--- a/index.html
+++ b/index.html
@@ -6,4 +6,13 @@ layout: default
 
 <p>Dinosaurs were super chill dudes.</p>
 
+<h2>Carnivores</h2>
+<ul>
+{% for dino in site.pages %}
+	{% if dino.category == "carnivore" %}
+	<li>{{dino.name}}</li>
+	{% endif %}
+{% endfor %}
+</ul>
+
 
